nuxt-app.yaml
apiVersion: apps/v1           
kind: Deployment                         
metadata:                                
  name: nuxt-app  # deployment 名称
  labels:
    app: nuxt-app # 标签                      
spec: 
  selector:
    matchLabels:
    # 对应的 Pod 标签, 被其选择的 Pod 的现有副本集将受到此部署的影响
      app: nuxt-app                                   
  replicas: 1  # Pod 节点数量                         
  template:   # 相当于 Pod 的配置                           
    metadata:                            
      labels:                            
        app: nuxt-app # Pod 标签
    spec: 
      # 定义从私有仓库拉取镜像
      imagePullSecrets:
      - name: docker-beta-secret
      containers:                        
      - name: nuxt-app                    
        image: harbor-beta.uhomecp.com/bill/nuxt-app:v1 # 镜像
        imagePullPolicy: Always 
        ports:                           
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: nuxt-app  # Service 名称
  labels:
    app: nuxt-app # 标签
spec:
  selector:
    app: nuxt-app # 对应的 Pod 标签
  ports:
    - protocol: TCP
      port: 3000       # 服务端口
      targetPort: 3000 # 代理端口



---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nuxt-app
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /nuxt-app
        backend:
          serviceName: nuxt-app # service名称
          servicePort: 3000 # 引用的服务端口, 对应 Service 中的 port
